# Thrawl

./: .gitignore  Cargo.toml  LICENSE  README.md  action.sh  build.ps1  build.rs  build.sh  config.conf  customize.sh  module.prop  post-fs-data.sh  service.sh  system.prop  uninstall.sh  update.json
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
scripts/: diagnostics.sh  install.sh  lmkd.sh  logging.sh  uffd.sh  utils.sh
src/: command.rs  config.rs  flags.rs  legacy.rs  lib.rs  lmkd.rs  logging.rs  main.rs  main_loop.rs  psi.rs  swap.rs  swappiness.rs  uffd.rs  vm_controller.rs  zram.rs
