[package]
name = "chimerad"
version = "0.1.0"
edition = "2021"
description = "Chimera adaptive memory optimizer daemon"
license = "MIT"

[lib]
name = "chimerad"
path = "src/lib.rs"

[[bin]]
name = "chimerad"
path = "src/main.rs"

[dependencies]
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
