[package]
name = "thrawld"
version = "1.0.1"
edition = "2021"
description = "A Rust daemon for adaptive memory management — ZRAM, swap, swappiness, and LMKD tuning. Works on PSI and legacy kernels."
license = "MIT"

[lib]
name = "thrawld"
path = "src/lib.rs"

[[bin]]
name = "thrawld"
path = "src/main.rs"

[dependencies]
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
